# synapse-core

./: Cargo.toml
.github/workflows/: rust.yml
cli/synapse-cli/: Cargo.toml
cli/synapse-cli/src/: lib.rs  main.rs
migrations/: 20260620000000_add_horizon_payment_id.sql
sdks/rust/: Cargo.toml
sdks/rust/src/: admin.rs  client.rs  error.rs  lib.rs  models.rs
sdks/rust/src/resources/: mod.rs  transactions.rs
src/: cli.rs  lib.rs
src/auth/: error.rs
src/db/: mod.rs  queries.rs
src/handlers/: mod.rs  ws.rs
src/middleware/: idempotency.rs  mod.rs  signature_verification.rs  tenant.rs
src/services/: account_monitor.rs  circuit_breaker.rs  mod.rs  settlement.rs
src/telemetry/: connection_pool.rs  error_handling.rs  mod.rs
src/ws/: health.rs  pagination.rs
tests/: health_check_test.rs  tenant_context_isolation_test.rs  webhook_concurrent_delivery_test.rs
